k8s/05-timeouts/color-timeout-linkerd.yaml
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: color-timeout
  namespace: faces
spec:
  parentRefs:
    - name: color
      kind: Service
      group: core
      port: 80
  rules:
  - backendRefs:
    - name: color
      port: 80
    timeouts:
      request: 300ms
